Move `temp-intro` to `1r` folder

--- a/main.tex
+++ b/main.tex
@@ -470,7 +470,7 @@
  %%%%% BODY MATTER %%%%%
 \newcommand{\primer}{
     \book{Primer curs}
-    \subfile{body-matter/temp-intro.tex}
+    \subfile{body-matter/1r/temp-intro.tex}
     \subfile{body-matter/1r/fonaments-de-les-matematiques.tex}
     \subfile{body-matter/1r/algebra-lineal.tex}
     \subfile{body-matter/1r/funcions-de-variable-real.tex}
