Separate classes into files

--- a/body-matter/1r/geometria-projectiva.tex
+++ b/body-matter/1r/geometria-projectiva.tex
@@ -1,4 +1,4 @@
-\documentclass[../../main.tex]{subfiles}
+\documentclass[./primer.tex]{subfiles}
 
 \begin{document}
 \apendix{Geometria projectiva}
