--- a/body-matter/1r/temp-intro.tex
+++ b/body-matter/1r/temp-intro.tex
@@ -1,4 +1,4 @@
-\documentclass[../../main.tex]{subfiles}
+\documentclass[./primer.tex]{subfiles}
 
 \begin{document}
 \part{Coses per fer}
@@ -276,6 +276,4 @@
         una equació diferencial autònoma sobre un obert~\(\obert{U}\subseteq\mathbb{R}^{n}\) amb~\(X\in\mathcal{C}^{1}\),~\(x\in\obert{U}\) un punt i~\(\varphi_{x}\) la solució maximal tal que~\(\varphi_{x}(0)=x\).
         Aleshores direm que~\(\varphi_{x}\) és el flux de~\(x\).
     \end{definition}
-
-
 \end{document}
