--- a/main.tex
+++ b/main.tex
@@ -469,13 +469,7 @@
 
  %%%%% BODY MATTER %%%%%
 \newcommand{\primer}{
-    \book{Primer curs}
-    \subfile{body-matter/1r/temp-intro.tex}
-    \subfile{body-matter/1r/fonaments-de-les-matematiques.tex}
-    \subfile{body-matter/1r/algebra-lineal.tex}
-    \subfile{body-matter/1r/funcions-de-variable-real.tex}
-    %\subfile{body-matter/1r/geometria-projectiva.tex}
-%    \subfile{body-matter/1r/Apendix1r.tex} % Geometria projectiva
+    \subfile{./body-matter/1r/primer.tex}
 }
 \newcommand{\segon}{
     \book{Segon curs}
