Separate 2nd year classes into files

--- a/main.tex
+++ b/main.tex
@@ -472,15 +472,7 @@
     \subfile{./body-matter/1r/primer.tex}
 }
 \newcommand{\segon}{
-    \book{Segon curs}
-    \subfile{body-matter/2n/calcul-en-diverses-variables.tex}
-    \subfile{body-matter/2n/analisi-matematica.tex}
-    \subfile{body-matter/2n/geometria-lineal.tex}
-    \subfile{body-matter/2n/matematica-discreta.tex}
-    \subfile{body-matter/2n/estructures-algebraiques.tex}
-    \subfile{body-matter/2n/metodes-numerics.tex}
-    %\subfile{body-matter/2n/teoria-de-la-mesura.tex}
-%    \subfile{body-matter/2n/Apendix2n.tex} % Teoria de la mesura (Lebesge o per probabilitat?)
+    \subfile{./body-matter/2n/segon.tex}
 }
 \newcommand{\tercer}{
     \book{Tercer curs}
