Separate 3rd year classes into files

--- a/body-matter/3r/equacions-diferencials-II.tex
+++ b/body-matter/3r/equacions-diferencials-II.tex
@@ -53,192 +53,6 @@
 %    \begin{theorem}[Teorema de Perron-Hadamard]
 %        \labelname{Teorema de Perron-Hadamard}\label{thm:Teorema de Perron-Hadamard}
 %    \end{theorem}
-
-\chapter{Sistemes autònoms al pla}
-%\section{Òrbites}
-%    \subsection{Sistemes autònoms a \ensuremath{\mathbb{R}^{n}}}
-%    \subsection{Interpretació geomètrica}
-%    \subsection{Estructura de les òrbites}
-%    \subsection{Superfícies invariants}
-%\section{Sistemes integrables}
-%    \subsection{Integral primera}
-%%    \subsection{Propietats dels sistemes integrables}
-%    \subsection{Sistemes potencials}
-%    \subsection{Sistemes Hamiltonians}
-%    \subsection{Model de Lotka-Voltera}
-\section{Sistemes no integrables}
-%    \subsection{Teorema del flux tubular}
-%    \subsection{Anàlisi qualitativa dels punts d'equilibri}
-    \subsection{Comportament límit de les òrbites} % 4.1 Equações Diferenciais Ordinárias
-    \begin{definition}[Conjunts \(\omega\)-límit i \(\alpha\)-límit]
-        \labelname{conjunt \ensuremath{\omega}-límit}\label{def:conjunt-omega-limit}
-        \labelname{conjunt \ensuremath{\alpha}-límit}\label{def:conjunt-alpha-limit}
-        Sigui \(\varphi_{x}\colon\mathbb{R}\longrightarrow\mathbb{R}^{n}\) l'òrbita d'un punt \(x\in\mathbb{R}^{n}\).
-        Aleshores definim
-        \[
-            \omega(x)=\{y\in\mathbb{R}^{n}\mid\text{existeix }(t_{n})_{n\in\mathbb{N}}\text{ amb }t_{n}\overset{n\to\infty}{\longrightarrow}+\infty\text{ tal que }\varphi_{x}(t_{n})\overset{n\to\infty}{\longrightarrow}y\}
-        \]
-        com el conjunt \(\omega\)-límit de \(x\) i
-        \[
-            \alpha(x)=\{y\in\mathbb{R}^{n}\mid\text{existeix }(t_{n})_{n\in\mathbb{N}}\text{ amb }t_{n}\overset{n\to\infty}{\longrightarrow}-\infty\text{ tal que }\varphi_{x}(t_{n})\overset{n\to\infty}{\longrightarrow}y\}
-        \]
-        com el conjunt \(\alpha\)-límit de \(x\).
-    \end{definition}
-    \begin{observation}
-        Siguin \(x\in\mathbb{R}^{n}\) un punt i
-        \[
-            \dot{x}=f(x)\quad\text{i}\quad\dot{x}=-f(x)
-        \]
-        dues equacions diferencials.
-        Aleshores el conjunt \(\omega\)-límit de \(x\) en la primera equació diferencial és el conjunt \(\alpha\)-límit de \(x\) en la segona equació diferencial i, anàlogament, el conjunt \(\alpha\)-límit de \(x\) en la primera equació diferencial és el conjunt \(\omega\)-límit de \(x\) en la segona equació diferencial.
-    \end{observation}
-    \begin{definition}[Conjunts invariants]
-        \labelname{conjunt positivament invariant}\label{def:conjunt-positivament-invariant}
-        \labelname{conjunt negativament invariant}\label{def:conjunt-negativament-invariant}
-        \labelname{conjunt invariant}\label{def:conjunt-invariant}
-        Sigui \(\varphi_{x}\) l'òrbita d'un punt \(x\in\mathbb{R}^{n}\).
-        Aleshores definim
-        \[
-            \gamma^{+}(x)=\{\varphi_{x}(t)\mid t\geq0\},\quad\gamma^{-}(x)=\{\varphi_{x}(t)\mid t\leq0\}\quad\text{i}\quad\gamma(x)=\gamma^{+}(x)\cup\gamma^{-}(x),
-        \]
-        i direm que un conjunt \(C\subseteq\mathbb{R}^{n}\) és positivament invariant si per a tot \(y\in C\) tenim que \(\gamma^{+}(y)\subseteq C\), que és negativament invariant si per a tot \(y\in C\) tenim que \(\gamma^{-}(y)\subseteq C\) i que és invariant si per a tot \(y\in C\) tenim que \(\gamma(y)\subseteq C\).
-    \end{definition}
-    \begin{theorem}
-        \label{thm:propietats-topologiques-dels-omega-limits}
-        Siguin
-        \(\dot{x}=f(x)\)
-        una equació diferencial sobre \(\mathbb{R}^{n}\), \(\tancat{K}\) un compacte de \(\mathbb{R}^{n}\) i \(p\in\mathbb{R}^{n}\) un punt tals que \(\gamma^{+}(x)\subset\tancat{K}\).
-        Aleshores
-        \begin{enumerate}
-            \item\label{enum1:thm:propietats-topologiques-dels-omega-limits} \(\omega(x)\neq\emptyset\).
-            \item\label{enum2:thm:propietats-topologiques-dels-omega-limits} \(\omega(x)\) és un tancat.
-            \item\label{enum3:thm:propietats-topologiques-dels-omega-limits} \(\omega(x)=\omega(\varphi_{x}(t))\) per a tot \(t\in\mathbb{R}\).
-            \item\label{enum4:thm:propietats-topologiques-dels-omega-limits} \(\omega(x)\) és connex.
-        \end{enumerate}
-    \end{theorem}
-    \begin{proof}
-        Comencem veient el punt \eqref{enum1:thm:propietats-topologiques-dels-omega-limits}.
-        Per hipòtesi tenim que \(\gamma^{+}(x)\subset\tancat{K}\).
-        Ara bé, tenim que \(\varphi_{x}(0)=x\in\gamma^{+}(x)\), i per tant \(x\in\tancat{K}\) i tenim que \(\tancat{K}\neq\emptyset\).
-        %TODO (pàg. 132 Equações Diferenciais Ordinárias)
-    \end{proof}
-    \subsection{Teorema de Poincaré-Bendixson}
-    \begin{definition}[Secció transversal]
-        \labelname{secció transversal}\label{def:seccio-transversal}
-        Siguin \(\dot{x}=f(x)\) una equació diferencial sobre un obert \(\obert{U}\subseteq\mathbb{R}^{2}\) i \(\Sigma\subseteq\obert{U}\) una corba tal que per a tot \(x,y\in\Sigma\) es satisfà \(f(x)=f(y)\).
-        Aleshores direm que \(\Sigma\) és una secció transversal de l'equació diferencial.
-        % \Sigma no és una corba, és la seva imatge
-    \end{definition}
-%    \begin{lemma}
-%        \label{lemma:Teorema de Poincaré-Bendixson 1}
-%        Siguin \(\dot{x}=f(x)\) una equació diferencial sobre un obert \(\obert{U}\subseteq\mathbb{R}^{2}\), \(\Sigma\subseteq\obert{U}\) una secció transversal i \(p\in\obert{U}\) i \(q\in\Sigma\cap\omega(p)\) dos punts. Aleshores existeix una successió de punts \((\varphi_{p}(t_{n}))_{n\in\mathbb{N}}\) tals que
-%        \[\lim_{n\to\infty}\varphi_{p}(t_{n})=q.\]
-%        \begin{proof}
-%            %TODO
-%        \end{proof}
-%    \end{lemma}
-    \begin{definition}[Aplicació de retorn]
-        \labelname{aplicació de retorn}\label{def:aplicacio-de-retorn}
-        Siguin \(\dot{x}=f(x)\) una equació diferencial sobre un obert \(\obert{U}\subseteq\mathbb{R}^{2}\) i \(A\subseteq\obert{U}\) un conjunt tals que per a tot \(p\in A\) punt regular i tota secció transversal \(\Sigma\subseteq A\) existeix un entorn \(\obert{V}\subseteq\obert{U}\) de \(p\) tal que per a tot \(x\in\Sigma\cap\obert{V}\) existeix un \(t\neq0\) tal que \(\varphi_{x}(t)\in\Sigma\cap\obert{V}\).
-        Aleshores direm que \(A\) admet una aplicació de retorn.
-    \end{definition}
-    \begin{definition}[Gràfic]
-        \labelname{gràfic}\label{def:grafic}
-        Siguin \(\dot{x}=f(x)\) una equació diferencial sobre un obert \(\obert{U}\subseteq\mathbb{R}^{2}\) i \(A\subseteq\obert{U}\) un conjunt invariant que conté punts regulars i punts crítics tal que per a tot punt \(x\in A\) tenim \(\alpha(x)=\{p\}\) i \(\omega(x)=\{q\}\) per a certs punts crítics \(p,q\in A\), i tals que \(A\) admet una aplicació de retorn.
-        Aleshores direm que \(A\) és un gràfic.
-    \end{definition}
-    \begin{theorem}[Teorema de Poincaré-Bendixson]
-        \labelname{Teorema de Poincaré-Bendixson}\label{thm:Teorema-de-Poincare-Bendixson}
-        Siguin \(\dot{x}=f(x)\) una equació diferencial en \(\Omega\subseteq\mathbb{R}^{2}\) amb un nombre finit de punts crítics i \(\tancat{K}\subseteq\Omega\) un compacte tal que \(\gamma^{+}(x)\subseteq\tancat{K}\).
-        Aleshores
-        \begin{enumerate}
-            \item\label{enum1:thm:Teorema-de-Poincare-Bendixson} si \(\omega(x)\) només conté punts crítics tenim que \(\omega(x)=\{p\}\).
-            \item\label{enum2:thm:Teorema-de-Poincare-Bendixson} si \(\omega(x)\) conté punts crítics i punts regulars tenim que \(\omega(x)\) és un gràfic.
-            \item\label{enum3:thm:Teorema-de-Poincare-Bendixson} si \(\omega(x)\) no conté punts crítics tenim que \(\omega(x)\) és una òrbita periòdica.
-        \end{enumerate}
-    \end{theorem}
-    \begin{proof}
-%            Aquest enunciat té sentit pel Teorema \myref{thm:propietats-topologiques-dels-omega-limits}. %TODO
-    \end{proof}
-%    \begin{definition}[Corona circular]
-%        \labelname{corona circular}\label{def:corona circular}
-%    \end{definition}
-    \begin{theorem}
-        \label{thm:dins-duna-orbita-periodica-hi-ha-un-punt-critic}
-        Sigui \(\varphi\colon\mathbb{R}\longrightarrow\mathbb{R}^{2}\) una òrbita periòdica d'una equació diferencial \(\dot{x}=f(x)\).
-        Aleshores existeix un \(p\in\interior(\varphi(\mathbb{R}))\) tal que \(p\) és un punt crític.
-    \end{theorem}
-    \begin{proof}
-        %TODO
-    \end{proof}
-    \subsection{Criteri de Bendixson-Dulac}
-    \begin{theorem}[Criteri de Bendixson-Dulac]
-        \labelname{criteri de Bendixson-Dulac}\label{thm:Criteri-de-Bendixson-Dulac}
-    \end{theorem}
-    \begin{proof}
-        %TODO
-    \end{proof}
-    % 4.2 Equações Diferenciais Ordinárias
-%    \subsection{Funcions de Liapunov}
-    % 5 Lições de Equações Diferenciais Ordinárias
-%    \subsection{Cicles límit}
-
-\chapter{Equacions en derivades parcials}
-\section{Equacions en derivades parcials de primer ordre}
-    \subsection{Equació general de primer ordre}
-    \begin{definition}[Equació en derivades parcials de primer ordre]
-        \labelname{equació en derivades parcials de primer ordre}\label{def:equacio-en-derivades-parcials-de-primer-ordre}
-        Siguin \(\Omega\subseteq\mathbb{R}^{2n+1}\) un obert i \(F\colon\Omega\longrightarrow\mathbb{R}\) una funció.
-        Aleshores, denotant
-        \[
-            u_{i}(x)=\frac{\partial u(x)}{\partial x_{i}},
-        \]
-        direm que l'expressió
-        \[
-            F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))=0
-        \]
-        és una equació en derivades parcials de primer ordre sobre \(\Omega\).
-    \end{definition}
-    \begin{definition}[Solució d'una equació en derivades parcials]
-        \labelname{solució d'una equació en derivades parcials}\label{def:solucio-duna-equacio-en-derivades-parcials}
-        Siguin
-        \[
-            F(x_{1},\dots,x_{n},u(x),u_{1}(x),\dots,u_{n}(x))=0
-        \]
-        una equació en derivades parcials de primer ordre sobre un obert \(\Omega\) i \(\Phi(x)\colon\Omega\longrightarrow\mathbb{R}\) una funció de classe \(\mathcal{C}^{2}(\Omega)\) tal que
-        \[
-            F(x_{1},\dots,x_{n},\Phi(x),\Phi_{1}(x),\dots,\Phi_{n}(x))=0
-        \]
-        per a tot \(x\in\Omega\).
-        Aleshores direm que \(\Phi\) és una solució de l'equació en derivades parcials.
-    \end{definition}
-    \subsection{Equacions quasi-lineals de primer ordre}
-    \begin{definition}[Equació quasi-lineal]
-        \labelname{equació diferencial quasi-lineal}\label{def:equacio-diferencial-quasi-lineal}
-        Siguin \(\Omega\subseteq\mathbb{R}^{n}\times\mathbb{R}\) un obert, \(\{P_{i}\}_{i=1}^{N}\) una família de funcions de \(\Omega\) a \(\mathbb{R}\) i \(R\colon\Omega\longrightarrow\mathbb{R}\) una funció.
-        Aleshores direm que l'expressió
-        \[
-            \sum_{i=1}^{N}\left(P_{i}(x,u(x))\frac{\partial u(x)}{\partial x_{i}}\right)=R(x,u(x))
-        \]
-        és una equació diferencial quasi-lineal de primer ordre.
-    \end{definition}
-    \begin{example}
-        Exemples d'equacions quasi-lineals són, amb \(K>0\), l'equació de la calor
-        \[
-            \frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial u}{\partial t}
-        \]
-        o l'equació de la corda vibrant
-        \[
-            \frac{\partial^{2} u}{\partial x^{2}}=K\frac{\partial^{2} u}{\partial t^{2}},
-        \]
-        mentre que exemples d'equacions en derivades parcials que no siguin quasi-lineals són l'equació no lineal de la calor
-        \[
-            \frac{\partial^{2} u}{\partial x^{2}}+f(u)=K\frac{\partial u}{\partial t}
-        \]
-        o la llei de la conservació escalar
-        \[
-            \frac{\partial u(t)}{\partial t}+\divergencia(f(u(t)))=0.
-        \]
-    \end{example}
-
+\subfile{./equacions-diferencials-II/1-sistemes-autonoms-al-pla.tex}
+\subfile{./equacions-diferencials-II/2-equacions-en-derivades-parcials.tex}
 \end{document}
