--- a/main.tex
+++ b/main.tex
@@ -475,22 +475,8 @@
     \subfile{./body-matter/2n/segon.tex}
 }
 \newcommand{\tercer}{
-    \book{Tercer curs}
-    \subfile{body-matter/3r/topologia.tex}
-    \subfile{body-matter/3r/probabilitat.tex}
-    \subfile{body-matter/3r/equacions-diferencials-I.tex}
-    \subfile{body-matter/3r/teoria-de-Galois.tex}
-    \subfile{body-matter/3r/analisi-complexa.tex}
-    \subfile{body-matter/3r/estadistica.tex}
-    \subfile{body-matter/3r/geometria-diferencial.tex}
-    \subfile{body-matter/3r/equacions-diferencials-II.tex}
-    %\subfile{body-matter/3r/calcul-tensorial.tex}
-%    \subfile{body-matter/3r/Apendix3r.tex} % Formes diferencials (?) 
-}                                          % Tensor calculus (YouTube)
-                                           % Àlgebra homològica (Aquesta queda molt lluny, no crec)
-                                           % Catalogue of Spacetimes
-                                           %     https://arxiv.org/pdf/0904.4184.pdf
-                                           %     Coses de GR i GD precalculades
+    \subfile{./body-matter/3r/tercer.tex}
+}
 
  %%%%% BACK MATTER %%%%%
 %\newcommand{\apendix}{} % No
