Rearrange main year files

--- a/body-matter/primer/fonaments-de-les-matematiques.tex
+++ b/body-matter/primer/fonaments-de-les-matematiques.tex
@@ -1,4 +1,4 @@
-\documentclass[./primer.tex]{subfiles}
+\documentclass[../primer.tex]{subfiles}
 
 \begin{document}
 \part{Fonaments de les matemàtiques}
