--- a/body-matter/segon/calcul-en-diverses-variables.tex
+++ b/body-matter/segon/calcul-en-diverses-variables.tex
@@ -1,4 +1,4 @@
-\documentclass[./segon.tex]{subfiles}
+\documentclass[../segon.tex]{subfiles}
 
 \begin{document}
 \part{Càlcul en diverses variables i optimització}
