--- a/body-matter/tercer.tex
+++ b/body-matter/tercer.tex
@@ -1,16 +1,16 @@
-\documentclass[../../main.tex]{subfiles}
+\documentclass[../main.tex]{subfiles}
 
 \begin{document}
 \book{Tercer curs}
-\subfile{./topologia.tex}
-\subfile{./probabilitat.tex}
-\subfile{./equacions-diferencials-I.tex}
-\subfile{./teoria-de-Galois.tex}
-\subfile{./analisi-complexa.tex}
-\subfile{./estadistica.tex}
-\subfile{./geometria-diferencial.tex}
-\subfile{./equacions-diferencials-II.tex}
-%\subfile{body-matter/3r/calcul-tensorial.tex} % apèndix
+\subfile{./tercer/topologia.tex}
+\subfile{./tercer/probabilitat.tex}
+\subfile{./tercer/equacions-diferencials-I.tex}
+\subfile{./tercer/teoria-de-Galois.tex}
+\subfile{./tercer/analisi-complexa.tex}
+\subfile{./tercer/estadistica.tex}
+\subfile{./tercer/geometria-diferencial.tex}
+\subfile{./tercer/equacions-diferencials-II.tex}
+%\subfile{./tercer/calcul-tensorial.tex} % apèndix
                                                % Formes diferencials (?) 
                                                % Tensor calculus (YouTube)
                                                % Àlgebra homològica (Aquesta queda molt lluny, no crec)
