--- a/main.tex
+++ b/main.tex
@@ -469,13 +469,13 @@
 
  %%%%% BODY MATTER %%%%%
 \newcommand{\primer}{
-    \subfile{./body-matter/1r/primer.tex}
+    \subfile{./body-matter/primer.tex}
 }
 \newcommand{\segon}{
-    \subfile{./body-matter/2n/segon.tex}
+    \subfile{./body-matter/segon.tex}
 }
 \newcommand{\tercer}{
-    \subfile{./body-matter/3r/tercer.tex}
+    \subfile{./body-matter/tercer.tex}
 }
 
  %%%%% BACK MATTER %%%%%
