--- a/body-matter/tercer/analisi-complexa.tex
+++ b/body-matter/tercer/analisi-complexa.tex
@@ -1,4 +1,4 @@
-\documentclass[../../main.tex]{subfiles}
+\documentclass[../tercer.tex]{subfiles}
 
 \begin{document}
 \part{Anàlisi complexa i de Fourier}
