Remove sorting numbers from filenames

--- a/body-matter/primer/algebra-lineal.tex
+++ b/body-matter/primer/algebra-lineal.tex
@@ -2,9 +2,9 @@
 
 \begin{document}
 \part{Àlgebra lineal}
-\subfile{./algebra-lineal/1-matrius.tex}
-\subfile{./algebra-lineal/2-espais-vectorials-i-aplicacions-lineals.tex}
-\subfile{./algebra-lineal/3-classificacio-dendomorfismes.tex}
-\subfile{./algebra-lineal/4-espais-vectorials-euclidians.tex}
+\subfile{./algebra-lineal/matrius.tex}
+\subfile{./algebra-lineal/espais-vectorials-i-aplicacions-lineals.tex}
+\subfile{./algebra-lineal/classificacio-dendomorfismes.tex}
+\subfile{./algebra-lineal/espais-vectorials-euclidians.tex}
 % Àlgebra multilineal?
 \end{document}
